--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
             <p>Same as Stop, but the light cycles through random colors. Only RED means release!</p>
             <div class="features">Color cycling distraction</div>
         </a>
+
+        <a href="stop3.html" class="game-card">
+            <h2>Stop 3 <span class="difficulty hard">Hard</span></h2>
+            <p>Colors and shapes cycle independently. Release only when target shape appears in RED!</p>
+            <div class="features">Must match BOTH shape AND color</div>
+        </a>
     </div>
 
     <div class="section-title">Go/Stop Games (Tap &amp; Stop)</div>
@@ -150,8 +156,8 @@
 
         <a href="gostop3.html" class="game-card">
             <h2>Go/Stop 3 <span class="difficulty expert">Expert</span></h2>
-            <p>Colors cycle with shapes inside. Stop ONLY when you see the target shape in RED!</p>
-            <div class="features">Cognitive load: must match BOTH shape AND color</div>
+            <p>Colors and shapes cycle independently. Stop ONLY when target shape appears in RED!</p>
+            <div class="features">Independent cycling, hesitation = fail, cognitive load</div>
         </a>
     </div>
 </body>
