--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
         <a href="stop3.html" class="game-card">
             <h2>Stop 3 <span class="difficulty hard">Hard</span></h2>
-            <p>Colors and shapes cycle independently. Release only when target shape appears in RED!</p>
-            <div class="features">Must match BOTH shape AND color</div>
+            <p>Color and shape change together. Release only when target shape appears in RED!</p>
+            <div class="features">Must match BOTH shape AND color simultaneously</div>
         </a>
     </div>
 
@@ -156,8 +156,8 @@
 
         <a href="gostop3.html" class="game-card">
             <h2>Go/Stop 3 <span class="difficulty expert">Expert</span></h2>
-            <p>Colors and shapes cycle independently. Stop ONLY when target shape appears in RED!</p>
-            <div class="features">Independent cycling, hesitation = fail, cognitive load</div>
+            <p>Color and shape change together. Stop ONLY when target shape appears in RED!</p>
+            <div class="features">Simultaneous recognition, hesitation = fail</div>
         </a>
     </div>
 </body>
